--- a/selecao-java-front/src/app/components/history-item-components/edit-history-item/edit-history-item.component.html
+++ b/selecao-java-front/src/app/components/history-item-components/edit-history-item/edit-history-item.component.html
@@ -4,7 +4,13 @@
 
     <div class="form-group">
       <label for="region">Região</label>
-      <input type="text" class="form-control" id="region" required [(ngModel)]="historyItem.city.state.region" name="region">
+      <select class="form-control" required [(ngModel)]="historyItem.city.state.region" id="region"  name="region">
+        <option value="SUL">Sul</option>
+        <option value="SUDESTE">Sudeste</option>
+        <option value="CENTRO_OESTE">Centro-Oeste</option>
+        <option value="NORTE">Norte</option>
+        <option value="NORDESTE">Nordeste</option>
+      </select>
     </div>
 
     <div class="form-group">
