--- a/selecao-java-front/src/app/components/user-components/edit-user/edit-user.component.html
+++ b/selecao-java-front/src/app/components/user-components/edit-user/edit-user.component.html
@@ -13,7 +13,7 @@
 
     <div class="form-group">
       <label for="email">E-mail</label>
-      <input type="text" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
+      <input type="email" class="form-control" id="email" required [(ngModel)]="user.email" name="email">
     </div>
 
     <table>
