--- a/selecao-java-front/src/app/components/user-components/list-user/list-user.component.html
+++ b/selecao-java-front/src/app/components/user-components/list-user/list-user.component.html
@@ -11,7 +11,7 @@
         <th>Nome</th>
         <th>Email</th>
         <th>Ações</th>
-        <th><button (click)="newUser()" class="btn btn-info" style="margin-left: 10px">Create User</button></th>
+        <th><button (click)="newUser()" class="btn btn-success" style="margin-left: 10px">Novo</button></th>
       </tr>
       </thead>
       <tbody>
